try to fix gap on iPhone

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ green = #7A9A15 ; orange = #D97904 ; red = #D93D04 */
 /* div {
   border: 1px solid yellow;
 } */
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
 body {
   background-image: url('images/bg-theinfinite8enigma-East-Oakland-510-Graffiti-Art.jpeg');
   background-size: cover;
